stage0/tests/compile_fail/moves/move_into_call.dg
type P { v: i32 }
func consume(p: P) -> i32 { p.v }
func main() -> i32 {
    let p = P { v: 3 }
    let a = consume(p)
    let b = consume(p)
    a + b
}
